--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,12 @@
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
 		/>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Dosis:wght@300&family=EB+Garamond:wght@400;500&family=Montserrat:wght@300;600&family=Poppins:ital,wght@1,100;1,400;1,500&display=swap"
+			rel="stylesheet"
+		/>
 		<!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
